# Texture-gen

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: texture_generator.cpp  texture_generator.hpp  texture_params.hpp
src/noise/: noise_base.hpp  noise_factory.cpp  noise_factory.hpp  perlin_noise.cpp  perlin_noise.hpp  simplex_noise.cpp  simplex_noise.hpp
src/utils/: color.hpp  color_gradient.cpp  color_gradient.hpp  image_writer.cpp  image_writer.hpp  math_utils.hpp
tests/: test_noise.cpp
